--- a/Tamboliya.csproj
+++ b/Tamboliya.csproj
@@ -8,10 +8,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TamboliyaLibrary\**" />
+    <Content Remove="TamboliyaLibrary\**" />
+    <EmbeddedResource Remove="TamboliyaLibrary\**" />
+    <None Remove="TamboliyaLibrary\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.8" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.8" />
     <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="TamboliyaLibrary\TamboliyaLibrary.csproj" />
   </ItemGroup>
 
 </Project>
