--- a/wwwroot/appsettings.json
+++ b/wwwroot/appsettings.json
@@ -5,7 +5,9 @@
     "ResponseType": "code",
     "DefaultScopes": [
       "openid",
-      "profile" 
+      "profile",
+      "email",
+      "tamboliya-Api"
     ],
     "PostLogoutRedirectUri": "authentication/logout-callback",
     "RedirectUri": "authentication/login-callback"
