--- a/Tamboliya.csproj
+++ b/Tamboliya.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
+	<PackageReference Include="IdentityModel" Version="6.0.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
