--- a/wwwroot/appsettings.json
+++ b/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
   //"HubUrl": "https://localhost:7127/chathub",
-  //"WebApiServer": "https://localhost:7212/"
+  //"WebApiServer": "https://localhost:7212/",
 
   "HubUrl": "https://192.168.137.1:7127/chathub",
   "WebApiServer": "https://192.168.137.1:7212/"
